@@ -33,7 +33,8 @@ LIBGPHOTO2_SHARP_CSFILES =					\
 	$(srcdir)/FileSystem.cs					\
 	$(srcdir)/Files/GenericFile.cs				\
 	$(srcdir)/Files/ImageFile.cs				\
-	$(srcdir)/Files/MusicFile.cs
+	$(srcdir)/Files/MusicFile.cs				\
+	$(srcdir)/Files/PlaylistFile.cs
 
 MCSFLAGS = -debug -r:Mono.Posix
 
